# 045-cross-attention-multi-asset

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data.py  model.py  requirements.txt
python/examples/: 01_complete_example.py
rust/: Cargo.toml  README.md
rust/examples/: backtest.rs  fetch_data.rs  train.rs
rust/src/: lib.rs
rust/src/model/: attention.rs  cross_attention.rs  embedding.rs  mod.rs
rust/src/strategy/: backtest.rs  mod.rs  signals.rs
