[package]
name = "cross_attention_multi_asset"
version = "0.1.0"
edition = "2021"
authors = ["ML for Trading Contributors"]
description = "Cross-Attention mechanism for multi-asset trading in Rust"
license = "MIT"
readme = "README.md"

[dependencies]
# ML framework
candle-core = "0.8"
candle-nn = "0.8"

# Data processing
ndarray = { version = "0.16", features = ["serde"] }
polars = { version = "0.46", features = ["lazy", "temporal", "dtype-datetime"] }

# HTTP client for Bybit API
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "train"
path = "examples/train.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"

[profile.release]
opt-level = 3
lto = true
